feat: Added store availability endpoint
